test/fixtures/validate/bad/syntax-error.js
export const meta = {
  name: "syntax-error",
  description: "Unbalanced brace -> acorn parse error -> rejected.",
  phases: [],
};
agent("noop"
